add instruction for tooltip

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <img src="images/solar_panel.jpg" alt="Button 4" onclick="buttonClicked(4)">
       <p>21st Century</p>
   </div>
+  <h3>Hover over data points to see exact years and emissions</h3>
   <div id="graph-container">
   </div>
   <h3>Drag the slider below to change the end date of the graph</h3>
